--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,21 @@
       <artifactId>guava</artifactId>
       <version>27.1-jre</version>
     </dependency>
-    
+
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.4.2</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.5.0-M1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
