--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,26 @@
-# Build products
-target/
-docs/_build/
-dist/
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
 
 # IntelliJ data
 *.iml
@@ -9,16 +28,3 @@ dist/
 *.ipr
 .idea/
 
-# Other
-.DS_Store
-.dumbjump
-*classes
-*~
-*#
-.#*
-.classpath
-/.metadata
-.project
-.settings
-.tern-port
-ui/
